--- a/views/Projects.ejs
+++ b/views/Projects.ejs
@@ -5,32 +5,52 @@ Author's name = Dilpreet Singh
 Web site name = dilpreet.me
 file description = listing of projects made by me
 -->
-<div>
-        <h3> Pharmacy Website (Technologies Used: - Visual Studio, Asp.net, MVC, EF6, Angular.js, Bootstrap) </h3>
-        <p>
-        -	Worked on designing and coding a website for pharmacy. The website is built on top of MVC5 framework.
+<style>
+        .dialogbox .body {
+                max-width: 1200px;
+        }
+</style>
+<h3>Projects i have worked on</h3>
+        <div class="dialogbox">
+       <div class="body">
+                <span class="tip tip-up"></span>
+                 <h3> Pharmacy Website (Technologies Used: - Visual Studio, Asp.net, MVC, EF6, Angular.js, Bootstrap) </h3>
+       
+                  <div class="message">
+        	Worked on designing and coding a website for pharmacy. The website is built on top of MVC5 framework.
                 Using the latest Entity framework to interact with SQL Server this website is deployed on azure directly
-                from GitHub repository.<br>
-                Project link: - pendale.azurewebsites.net<br>
-                GitHub link: - https://github.com/preet19/PendalePharmacy
-        </p>
-</div>
-<div>
-        <h3> QA Automation portal (Technologies Used: - Visual Studio, Asp.net, Web Forms, Jquery, Bootstrap)  </h3>
-        <p>
-        -	Worked on developing a web portal to automate testing during my work term at royal bank of Canada.
+                from GitHub repository.<br><br>
+                 <a href="http://pendale.azurewebsites.net" target="_blank" class="btn btn-primary">Project link </a>
+                <a href="https://github.com/preet19/PendalePharmacy" target="_blank" class="btn btn-primary">GitHub link </a>
+                
+                  </div>
+                  <hr>
+                  <h3> QA Automation portal (Technologies Used: - Visual Studio, Asp.net, Web Forms, Jquery, Bootstrap)  </h3>
+                  <div class="message">
+         	Worked on developing a web portal to automate testing during my work term at royal bank of Canada.
                 worked with windows server to host the web portal on intranet. Created a portal to extract the values 
                 from XML and then compare it against the values from database and write the final result in txt file
-                for the user to review.
+                for the user to review. <br> <br>
+               
+                  <a href="http://rbcapp.azurewebsites.net" target="_blank" class="btn btn-primary">Project link </a>
+                  </div>
+                  <hr>
 
-        </p>
-</div>
-<div>
-        <h3> Personal Portfolio (Node JS, Express, MongoDB and AngularJS) </h3>
-        <p>
-                Personal portfolio site builds on top of mean stack. 
-        </p>
-</div>
+                <h3> Personal Portfolio (Node JS, Express, MongoDB and AngularJS) </h3>
+        <div class="message">
+                Personal portfolio site builds on top of mean stack. <br><br>
+                 <a href="http://dilpreet-singh.com" target="_blank" class="btn btn-primary">Project link </a>
+                <a href="https://github.com/preet19/MyPortfolio" target="_blank" class="btn btn-primary">GitHub link </a>
+                
+        </div>
+       
+        
+       </div>
+        </div>
+               
+        
+
+
 
 
 
