--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -49,19 +49,24 @@ comment box design
   position: relative;
   max-width: 300px;
   height: auto;
+  min-height: 150px;
   margin: 20px 10px;
   padding: 5px;
   border-radius: 3px;
   border: 5px solid #ccc;
+  background-color: darkslategray;
+  
 }
+
+
 
 .body .message {
   min-height: 30px;
   border-radius: 3px;
-  font-family: Arial;
   font-size: 14px;
   line-height: 1.5;
   color: azure;
+      font-family: 'Ubuntu';
 }
 
 .stick 
@@ -584,7 +589,7 @@ blockquote:first-letter {
 }
 
 h3 {
-     font-family: 'Shadows Into Light';
+    
      color: white;
 }
 
