skills page update

--- a/views/Skills.ejs
+++ b/views/Skills.ejs
@@ -24,13 +24,28 @@ file description = expertize in various field of IT
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <img class="skill-image" src="./images/asp.png" />
-                    <h3>ASP.NET(C#)</h3>
+                    <h3>ASP.NET WebForms</h3>
                     <div class="dialogbox">
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Excellent working skills with ASP.net Framework. gained good skills working
-                            with WebForms, Windows Form and MVC Framewwork.</span>
+                            <span>Excellent working skills with ASP.net Webforms, worked towards building a webportal 
+                                using server controls, webforms etc.</span>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 text-center">
+                <div class="service-box">
+                    <img class="skill-image" src="./images/mvc.png" />
+                    <h3>Asp.net MVC</h3>
+                    <div class="dialogbox">
+                         <div class="body">
+                            <span class="tip tip-up"></span>
+                                 <div class="message">
+                            <span>Expeience working with ASP.net MVC5 Framework. Used MVC5,
+                                         Entity Framework 6 and ASP.net Framework 4.6 to build a fully functional web app</span>
                             </div>
                         </div>
                      </div>
@@ -39,27 +54,13 @@ file description = expertize in various field of IT
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <img class="skill-image" src="./images/mean.jpg" />
-                    <h3>MEAN STACK</h3>
+                    <h3>MEAN Stack</h3>
                     <div class="dialogbox">
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Got Excellent skills to work with mean stack. used nodejs, angularjs, express and
-                            MongoDB to produce dynamic web apps.</span>
-                            </div>
-                        </div>
-                     </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <img class="skill-image" src="./images/html.jpg" />
-                    <h3>HTML, CSS</h3>
-                    <div class="dialogbox">
-                         <div class="body">
-                            <span class="tip tip-up"></span>
-                                 <div class="message">
-                            <span>Used HTML and CSS to build graphical interface for web applications.</span>
+                            <span>Excellent Working skills with MEAN Stack (MongoDB, Express generator, Angularjs 
+                                and nodejs).</span>
                             </div>
                         </div>
                      </div>
@@ -68,13 +69,14 @@ file description = expertize in various field of IT
             
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img class="skill-image" src="./images/php.png" />
-                    <h3>PHP</h3>
+                    <img class="skill-image" src="./images/database.png" />
+                    <h3>MySql, MongoDB</h3>
                     <div class="dialogbox">
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Done PHP development and build data driven websites with MySql.</span>
+                            <span>good understanding of working with relational database system ex:- MYSQL and non 
+                                relational database system ex:- MongoDB.</span>
                             </div>
                         </div>
                      </div>
@@ -87,13 +89,15 @@ file description = expertize in various field of IT
         
          <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img class="skill-image" src="./images/java.png" />
-                     <h3>Java</h3>
+                    <img class="skill-image" src="./images/html.jpg" />
+                     <h3>HTML,CSS,Javascript</h3>
                     <div class="dialogbox">
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Used Object Oriented approach to develop applications in java  .</span>
+                            <span>Good understanding of client side markup and scripting languages.worked with various
+                                javascript Libraries like JQuery,Angularjs and Ajax.
+                            </span>
                             </div>
                         </div>
                      </div>
@@ -102,14 +106,13 @@ file description = expertize in various field of IT
             
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img class="skill-image" src="./images/html.jpg" />
-                    <h3>Tools & Frameworks</h3>
+                    <img class="skill-image" src="./images/java.png" />
+                    <h3>JAVA</h3>
                     <div class="dialogbox">
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Worked with various tools and frameworks for project managenment and development including
-                            Microsodt Project, Microsoft Visio, ASP.Net etc.</span>
+                            <span>Used the Object oriented techniques to write quality code in Java.</span>
                             </div>
                         </div>
                      </div>
@@ -118,13 +121,13 @@ file description = expertize in various field of IT
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <img class="skill-image" src="./images/javascript.jpg" />
-                    <h3>Javascript</h3>
+                    <h3>Enitity Framework</h3>
                     <div class="dialogbox">
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Working knowledge of world most famous language Javascript and it's
-                            Libraries (Ajax, JQuery).</span>
+                            <span>Experience working in entity framework which uses the Linq syntax to perform the CRUD 
+                                operations on SQL database server.</span>
                             </div>
                         </div>
                      </div>
@@ -132,13 +135,14 @@ file description = expertize in various field of IT
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img class="skill-image" src="./images/database.png" />
-                    <h3>SQL Server, MongoDB</h3>
+                    <img class="skill-image" src="./images/server.png" />
+                    <h3>Linux,Windows server</h3>
                     <div class="dialogbox">
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Advanced working knowledge of relational Database server and NOSQL Dalatabase.</span>
+                            <span>Gained some skills working with IIS and Linux server. can deploy web app to iis server and
+                                can succesfully fixed the arised issues.</span>
                             </div>
                         </div>
                      </div>
