--- a/views/Skills.ejs
+++ b/views/Skills.ejs
@@ -95,7 +95,7 @@ file description = expertize in various field of IT
                          <div class="body">
                             <span class="tip tip-up"></span>
                                  <div class="message">
-                            <span>Good understanding of client side markup and scripting languages.worked with various
+                            <span>Excellent client side markup and scripting languages skills.worked with various
                                 javascript Libraries like JQuery,Angularjs and Ajax.
                             </span>
                             </div>
