--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,10 @@
 <footer class="navbar navbar-inverse navbar-fixed-bottom ">
     <div class="container">
-        <div class="navbar-text pull-left">
-         &copy; 2016 Dilpreet
-        </div>
+        <div style="margin: auto;width: 20%;padding: 10px;">
+          <a href="https://github.com/preet19" target="_blank" class="btn btn-social-icon btn-github"><i class="fa fa-github"></i>  </a>
+          <a href="https://www.linkedin.com/in/dilpreet-singh-304018116/" target="_blank"  class="btn btn-social-icon btn-linkedin"><i class="fa fa-linkedin"></i></a>
+            </div>
+        
     </div>
 
 
