--- a/views/About.ejs
+++ b/views/About.ejs
@@ -13,9 +13,8 @@ file description = the details about me
      blockquote to describe something about me
     -->
     <blockquote>
-        Recently Graduated individual having strong urge of pursuing his career in IT industry.
-        Experience in working on some live projects and received professional coaching in ASP.net
-        and PHP. I am currently enrolled in 2-year computer programming at Georgian College.
+        Dilpreet has done bachelor's degree in computer science. Over the time he has developed skills in various programming 
+        languages. 
     </blockquote>
 </div>
 
