--- a/views/About.ejs
+++ b/views/About.ejs
@@ -13,8 +13,8 @@ file description = the details about me
      blockquote to describe something about me
     -->
     <blockquote>
-        Dilpreet has done bachelor's degree in computer science. Over the time he has developed skills in various programming 
-        languages. 
+        <i class="fa fa-terminal fa-stack fa-inverse"></i>Dilpreet has done bachelor's degree in computer science. Over the time he has developed skills in various programming 
+        languages. He is now pursuing his carrer as a Full Stack .Net Developer.
     </blockquote>
 </div>
 
